core/acs_parser.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/

'use strict';

class peg$SyntaxError extends SyntaxError {
    constructor(message, expected, found, location) {
        super(message);
        this.expected = expected;
        this.found = found;
        this.location = location;
        this.name = 'SyntaxError';
    }

    format(sources) {
        let str = 'Error: ' + this.message;
        if (this.location) {
            let src = null;
            const st = sources.find(s => s.source === this.location.source);
            if (st) {
                src = st.text.split(/\r\n|\n|\r/g);
            }
            const s = this.location.start;
            const offset_s =
                this.location.source && typeof this.location.source.offset === 'function'
                    ? this.location.source.offset(s)
                    : s;
            const loc =
                this.location.source + ':' + offset_s.line + ':' + offset_s.column;
            if (src) {
                const e = this.location.end;
                const filler = ''.padEnd(offset_s.line.toString().length, ' ');
                const line = src[s.line - 1];
                const last = s.line === e.line ? e.column : line.length + 1;
                const hatLen = last - s.column || 1;
                str +=
                    '\n --> ' +
                    loc +
                    '\n' +
                    filler +
                    ' |\n' +
                    offset_s.line +
                    ' | ' +
                    line +
                    '\n' +
                    filler +
                    ' | ' +
                    ''.padEnd(s.column - 1, ' ') +
                    ''.padEnd(hatLen, '^');
            } else {
                str += '\n at ' + loc;
            }
        }
        return str;
    }

    static buildMessage(expected, found) {
        function hex(ch) {
            return ch.codePointAt(0).toString(16).toUpperCase();
        }

        const nonPrintable = Object.prototype.hasOwnProperty.call(
            RegExp.prototype,
            'unicode'
        )
            ? new RegExp('[\\p{C}\\p{Mn}\\p{Mc}]', 'gu')
            : null;
        function unicodeEscape(s) {
            if (nonPrintable) {
                return s.replace(nonPrintable, ch => '\\u{' + hex(ch) + '}');
            }
            return s;
        }

        function literalEscape(s) {
            return unicodeEscape(
                s
                    .replace(/\\/g, '\\\\')
                    .replace(/"/g, '\\"')
                    .replace(/\0/g, '\\0')
                    .replace(/\t/g, '\\t')
                    .replace(/\n/g, '\\n')
                    .replace(/\r/g, '\\r')
                    .replace(/[\x00-\x0F]/g, ch => '\\x0' + hex(ch))
                    .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => '\\x' + hex(ch))
            );
        }

        function classEscape(s) {
            return unicodeEscape(
                s
                    .replace(/\\/g, '\\\\')
                    .replace(/\]/g, '\\]')
                    .replace(/\^/g, '\\^')
                    .replace(/-/g, '\\-')
                    .replace(/\0/g, '\\0')
                    .replace(/\t/g, '\\t')
                    .replace(/\n/g, '\\n')
                    .replace(/\r/g, '\\r')
                    .replace(/[\x00-\x0F]/g, ch => '\\x0' + hex(ch))
                    .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => '\\x' + hex(ch))
            );
        }

        const DESCRIBE_EXPECTATION_FNS = {
            literal(expectation) {
                return '"' + literalEscape(expectation.text) + '"';
            },

            class(expectation) {
                const escapedParts = expectation.parts.map(part =>
                    Array.isArray(part)
                        ? classEscape(part[0]) + '-' + classEscape(part[1])
                        : classEscape(part)
                );

                return (
                    '[' +
                    (expectation.inverted ? '^' : '') +
                    escapedParts.join('') +
                    ']' +
                    (expectation.unicode ? 'u' : '')
                );
            },

            any() {
                return 'any character';
            },

            end() {
                return 'end of input';
            },

            other(expectation) {
                return expectation.description;
            },
        };

        function describeExpectation(expectation) {
            return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
        }

        function describeExpected(expected) {
            const descriptions = expected.map(describeExpectation);
            descriptions.sort();

            if (descriptions.length > 0) {
                let j = 1;
                for (let i = 1; i < descriptions.length; i++) {
                    if (descriptions[i - 1] !== descriptions[i]) {
                        descriptions[j] = descriptions[i];
                        j++;
                    }
                }
                descriptions.length = j;
            }

            switch (descriptions.length) {
                case 1:
                    return descriptions[0];

                case 2:
                    return descriptions[0] + ' or ' + descriptions[1];

                default:
                    return (
                        descriptions.slice(0, -1).join(', ') +
                        ', or ' +
                        descriptions[descriptions.length - 1]
                    );
            }
        }

        function describeFound(found) {
            return found ? '"' + literalEscape(found) + '"' : 'end of input';
        }

        return (
            'Expected ' +
            describeExpected(expected) +
            ' but ' +
            describeFound(found) +
            ' found.'
        );
    }
}

function peg$parse(input, options) {
    options = options !== undefined ? options : {};

    const peg$FAILED = {};
    const peg$source = options.grammarSource;

    const peg$startRuleFunctions = {
        start: peg$parsestart,
    };
    let peg$startRuleFunction = peg$parsestart;

    const peg$c0 = '|';
    const peg$c1 = '&';
    const peg$c2 = '!';
    const peg$c3 = '(';
    const peg$c4 = ')';
    const peg$c5 = ',';
    const peg$c6 = ' ';
    const peg$c7 = '[';
    const peg$c8 = ']';

    const peg$r0 = /^[A-Z]/;
    const peg$r1 = /^[A-Za-z0-9\-_+]/;
    const peg$r2 = /^[0-9]/;

    const peg$e0 = peg$literalExpectation('|', false);
    const peg$e1 = peg$literalExpectation('&', false);
    const peg$e2 = peg$literalExpectation('!', false);
    const peg$e3 = peg$literalExpectation('(', false);
    const peg$e4 = peg$literalExpectation(')', false);
    const peg$e5 = peg$literalExpectation(',', false);
    const peg$e6 = peg$literalExpectation(' ', false);
    const peg$e7 = peg$literalExpectation('[', false);
    const peg$e8 = peg$literalExpectation(']', false);
    const peg$e9 = peg$classExpectation([['A', 'Z']], false, false, false);
    const peg$e10 = peg$classExpectation(
        [['A', 'Z'], ['a', 'z'], ['0', '9'], '-', '_', '+'],
        false,
        false,
        false
    );
    const peg$e11 = peg$classExpectation([['0', '9']], false, false, false);

    function peg$f0(e) {
        return e;
    }
    function peg$f1(left, right) {
        return left || right;
    }
    function peg$f2(left, right) {
        return left && right;
    }
    function peg$f3(left, right) {
        return left && right;
    }
    function peg$f4(value) {
        return !value;
    }
    function peg$f5(value) {
        return value;
    }
    function peg$f6(acs, a) {
        return checkAccess(acs, a);
    }
    function peg$f7(c) {
        return c.join('');
    }
    function peg$f8(a) {
        return a.join('');
    }
    function peg$f9(v) {
        return v;
    }
    function peg$f10(start, last) {
        return start.concat(last);
    }
    function peg$f11(l) {
        return l;
    }
    function peg$f12(d) {
        return parseInt(d.join(''), 10);
    }
    let peg$currPos = options.peg$currPos | 0;
    let peg$savedPos = peg$currPos;
    const peg$posDetailsCache = [{ line: 1, column: 1 }];
    let peg$maxFailPos = peg$currPos;
    let peg$maxFailExpected = options.peg$maxFailExpected || [];
    let peg$silentFails = options.peg$silentFails | 0;

    let peg$result;

    if (options.startRule) {
        if (!(options.startRule in peg$startRuleFunctions)) {
            throw new Error(
                'Can\'t start parsing from rule "' + options.startRule + '".'
            );
        }

        peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
        return input.substring(peg$savedPos, peg$currPos);
    }

    function offset() {
        return peg$savedPos;
    }

    function range() {
        return {
            source: peg$source,
            start: peg$savedPos,
            end: peg$currPos,
        };
    }

    function location() {
        return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
        location =
            location !== undefined
                ? location
                : peg$computeLocation(peg$savedPos, peg$currPos);

        throw peg$buildStructuredError(
            [peg$otherExpectation(description)],
            input.substring(peg$savedPos, peg$currPos),
            location
        );
    }

    function error(message, location) {
        location =
            location !== undefined
                ? location
                : peg$computeLocation(peg$savedPos, peg$currPos);

        throw peg$buildSimpleError(message, location);
    }

    function peg$getUnicode(pos = peg$currPos) {
        const cp = input.codePointAt(pos);
        if (cp === undefined) {
            return '';
        }
        return String.fromCodePoint(cp);
    }

    function peg$literalExpectation(text, ignoreCase) {
        return { type: 'literal', text, ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
        return { type: 'class', parts, inverted, ignoreCase, unicode };
    }

    function peg$anyExpectation() {
        return { type: 'any' };
    }

    function peg$endExpectation() {
        return { type: 'end' };
    }

    function peg$otherExpectation(description) {
        return { type: 'other', description };
    }

    function peg$computePosDetails(pos) {
        let details = peg$posDetailsCache[pos];
        let p;

        if (details) {
            return details;
        } else {
            if (pos >= peg$posDetailsCache.length) {
                p = peg$posDetailsCache.length - 1;
            } else {
                p = pos;
                while (!peg$posDetailsCache[--p]) {}
            }

            details = peg$posDetailsCache[p];
            details = {
                line: details.line,
                column: details.column,
            };

            while (p < pos) {
                if (input.charCodeAt(p) === 10) {
                    details.line++;
                    details.column = 1;
                } else {
                    details.column++;
                }

                p++;
            }

            peg$posDetailsCache[pos] = details;

            return details;
        }
    }

    function peg$computeLocation(startPos, endPos, offset) {
        const startPosDetails = peg$computePosDetails(startPos);
        const endPosDetails = peg$computePosDetails(endPos);

        const res = {
            source: peg$source,
            start: {
                offset: startPos,
                line: startPosDetails.line,
                column: startPosDetails.column,
            },
            end: {
                offset: endPos,
                line: endPosDetails.line,
                column: endPosDetails.column,
            },
        };
        if (offset && peg$source && typeof peg$source.offset === 'function') {
            res.start = peg$source.offset(res.start);
            res.end = peg$source.offset(res.end);
        }
        return res;
    }

    function peg$fail(expected) {
        if (peg$currPos < peg$maxFailPos) {
            return;
        }

        if (peg$currPos > peg$maxFailPos) {
            peg$maxFailPos = peg$currPos;
            peg$maxFailExpected = [];
        }

        peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
        return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
        return new peg$SyntaxError(
            peg$SyntaxError.buildMessage(expected, found),
            expected,
            found,
            location
        );
    }

    function peg$parsestart() {
        let s0, s1, s2, s3;

        s0 = peg$currPos;
        s1 = peg$parseoptWs();
        s2 = peg$parseorExpr();
        if (s2 !== peg$FAILED) {
            s3 = peg$parseoptWs();
            peg$savedPos = s0;
            s0 = peg$f0(s2);
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseOR() {
        let s0;

        if (input.charCodeAt(peg$currPos) === 124) {
            s0 = peg$c0;
            peg$currPos++;
        } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$e0);
            }
        }

        return s0;
    }

    function peg$parseAND() {
        let s0;

        if (input.charCodeAt(peg$currPos) === 38) {
            s0 = peg$c1;
            peg$currPos++;
        } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$e1);
            }
        }

        return s0;
    }

    function peg$parseNOT() {
        let s0;

        if (input.charCodeAt(peg$currPos) === 33) {
            s0 = peg$c2;
            peg$currPos++;
        } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$e2);
            }
        }

        return s0;
    }

    function peg$parsegroupOpen() {
        let s0;

        if (input.charCodeAt(peg$currPos) === 40) {
            s0 = peg$c3;
            peg$currPos++;
        } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$e3);
            }
        }

        return s0;
    }

    function peg$parsegroupClose() {
        let s0;

        if (input.charCodeAt(peg$currPos) === 41) {
            s0 = peg$c4;
            peg$currPos++;
        } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$e4);
            }
        }

        return s0;
    }

    function peg$parseorExpr() {
        let s0, s1, s2, s3, s4, s5;

        s0 = peg$currPos;
        s1 = peg$parseandExpr();
        if (s1 !== peg$FAILED) {
            s2 = peg$parseoptWs();
            s3 = peg$parseOR();
            if (s3 !== peg$FAILED) {
                s4 = peg$parseoptWs();
                s5 = peg$parseorExpr();
                if (s5 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s0 = peg$f1(s1, s5);
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
            s0 = peg$parseandExpr();
        }

        return s0;
    }

    function peg$parseandExpr() {
        let s0, s1, s2, s3, s4, s5;

        s0 = peg$currPos;
        s1 = peg$parsenotExpr();
        if (s1 !== peg$FAILED) {
            s2 = peg$parseoptWs();
            s3 = peg$parseAND();
            if (s3 !== peg$FAILED) {
                s4 = peg$parseoptWs();
                s5 = peg$parseorExpr();
                if (s5 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s0 = peg$f2(s1, s5);
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parsenotExpr();
            if (s1 !== peg$FAILED) {
                s2 = peg$parseoptWs();
                s3 = peg$parseorExpr();
                if (s3 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s0 = peg$f3(s1, s3);
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
            if (s0 === peg$FAILED) {
                s0 = peg$parsenotExpr();
            }
        }

        return s0;
    }

    function peg$parsenotExpr() {
        let s0, s1, s2, s3;

        s0 = peg$currPos;
        s1 = peg$parseNOT();
        if (s1 !== peg$FAILED) {
            s2 = peg$parseoptWs();
            s3 = peg$parseatom();
            if (s3 !== peg$FAILED) {
                peg$savedPos = s0;
                s0 = peg$f4(s3);
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
            s0 = peg$parseatom();
        }

        return s0;
    }

    function peg$parseatom() {
        let s0, s1, s2, s3, s4, s5;

        s0 = peg$parseacsCheck();
        if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parsegroupOpen();
            if (s1 !== peg$FAILED) {
                s2 = peg$parseoptWs();
                s3 = peg$parseorExpr();
                if (s3 !== peg$FAILED) {
                    s4 = peg$parseoptWs();
                    s5 = peg$parsegroupClose();
                    if (s5 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s0 = peg$f5(s3);
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        }

        return s0;
    }

    function peg$parsecomma() {
        let s0;

        if (input.charCodeAt(peg$currPos) === 44) {
            s0 = peg$c5;
            peg$currPos++;
        } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$e5);
            }
        }

        return s0;
    }

    function peg$parsews() {
        let s0;

        if (input.charCodeAt(peg$currPos) === 32) {
            s0 = peg$c6;
            peg$currPos++;
        } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$e6);
            }
        }

        return s0;
    }

    function peg$parseoptWs() {
        let s0, s1;

        s0 = [];
        s1 = peg$parsews();
        while (s1 !== peg$FAILED) {
            s0.push(s1);
            s1 = peg$parsews();
        }

        return s0;
    }

    function peg$parselistOpen() {
        let s0;

        if (input.charCodeAt(peg$currPos) === 91) {
            s0 = peg$c7;
            peg$currPos++;
        } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$e7);
            }
        }

        return s0;
    }

    function peg$parselistClose() {
        let s0;

        if (input.charCodeAt(peg$currPos) === 93) {
            s0 = peg$c8;
            peg$currPos++;
        } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$e8);
            }
        }

        return s0;
    }

    function peg$parseacsCheck() {
        let s0, s1, s2;

        s0 = peg$currPos;
        s1 = peg$parseacsCode();
        if (s1 !== peg$FAILED) {
            s2 = peg$parsearg();
            if (s2 !== peg$FAILED) {
                peg$savedPos = s0;
                s0 = peg$f6(s1, s2);
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseacsCode() {
        let s0, s1, s2, s3;

        s0 = peg$currPos;
        s1 = peg$currPos;
        s2 = input.charAt(peg$currPos);
        if (peg$r0.test(s2)) {
            peg$currPos++;
        } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$e9);
            }
        }
        if (s2 !== peg$FAILED) {
            s3 = input.charAt(peg$currPos);
            if (peg$r0.test(s3)) {
                peg$currPos++;
            } else {
                s3 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$e9);
                }
            }
            if (s3 !== peg$FAILED) {
                s2 = [s2, s3];
                s1 = s2;
            } else {
                peg$currPos = s1;
                s1 = peg$FAILED;
            }
        } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
        }
        if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$f7(s1);
        }
        s0 = s1;

        return s0;
    }

    function peg$parseargVar() {
        let s0, s1, s2;

        s0 = peg$currPos;
        s1 = [];
        s2 = input.charAt(peg$currPos);
        if (peg$r1.test(s2)) {
            peg$currPos++;
        } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$e10);
            }
        }
        if (s2 !== peg$FAILED) {
            while (s2 !== peg$FAILED) {
                s1.push(s2);
                s2 = input.charAt(peg$currPos);
                if (peg$r1.test(s2)) {
                    peg$currPos++;
                } else {
                    s2 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$e10);
                    }
                }
            }
        } else {
            s1 = peg$FAILED;
        }
        if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$f8(s1);
        }
        s0 = s1;

        return s0;
    }

    function peg$parsecommaList() {
        let s0, s1, s2, s3, s4, s5, s6;

        s0 = peg$currPos;
        s1 = [];
        s2 = peg$currPos;
        s3 = peg$parseargVar();
        if (s3 !== peg$FAILED) {
            s4 = peg$parseoptWs();
            s5 = peg$parsecomma();
            if (s5 !== peg$FAILED) {
                s6 = peg$parseoptWs();
                peg$savedPos = s2;
                s2 = peg$f9(s3);
            } else {
                peg$currPos = s2;
                s2 = peg$FAILED;
            }
        } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
        }
        while (s2 !== peg$FAILED) {
            s1.push(s2);
            s2 = peg$currPos;
            s3 = peg$parseargVar();
            if (s3 !== peg$FAILED) {
                s4 = peg$parseoptWs();
                s5 = peg$parsecomma();
                if (s5 !== peg$FAILED) {
                    s6 = peg$parseoptWs();
                    peg$savedPos = s2;
                    s2 = peg$f9(s3);
                } else {
                    peg$currPos = s2;
                    s2 = peg$FAILED;
                }
            } else {
                peg$currPos = s2;
                s2 = peg$FAILED;
            }
        }
        s2 = peg$parseargVar();
        if (s2 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f10(s1, s2);
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parselist() {
        let s0, s1, s2, s3;

        s0 = peg$currPos;
        s1 = peg$parselistOpen();
        if (s1 !== peg$FAILED) {
            s2 = peg$parsecommaList();
            if (s2 !== peg$FAILED) {
                s3 = peg$parselistClose();
                if (s3 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s0 = peg$f11(s2);
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parsenumber() {
        let s0, s1, s2;

        s0 = peg$currPos;
        s1 = [];
        s2 = input.charAt(peg$currPos);
        if (peg$r2.test(s2)) {
            peg$currPos++;
        } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$e11);
            }
        }
        if (s2 !== peg$FAILED) {
            while (s2 !== peg$FAILED) {
                s1.push(s2);
                s2 = input.charAt(peg$currPos);
                if (peg$r2.test(s2)) {
                    peg$currPos++;
                } else {
                    s2 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$e11);
                    }
                }
            }
        } else {
            s1 = peg$FAILED;
        }
        if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$f12(s1);
        }
        s0 = s1;

        return s0;
    }

    function peg$parsearg() {
        let s0;

        s0 = peg$parselist();
        if (s0 === peg$FAILED) {
            s0 = peg$parsenumber();
            if (s0 === peg$FAILED) {
                s0 = null;
            }
        }

        return s0;
    }

    const UserProps = require('./user_property.js');
    const Log = require('./logger.js').log;
    const User = require('./user.js');
    const Config = require('./config.js').get;
    const ActivityPubSettings = require('./activitypub/settings');
    const UserTime = require('./user_time.js');

    const _ = require('lodash');
    const moment = require('moment');

    const client = _.get(options, 'subject.client');
    const user = _.get(options, 'subject.user');
